<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface"
    android:contentDescription="@string/contact_diary_overview_title"
    android:orientation="vertical"
    tools:context="contactdiary.ui.overview.ContactDiaryOverviewFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/CWAMaterialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/contact_diary_overview_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contact_diary_overview_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/padding_80"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/contact_diary_overview_list_item" />

</LinearLayout>
