...
        android:background="@android:color/transparent"
        android:touchscreenBlocksFocus="false"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:fabAlignmentMode="center">
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/fake_bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:outlineAmbientShadowColor="@android:color/transparent"
            android:outlineSpotShadowColor="@android:color/transparent"
            android:touchscreenBlocksFocus="false"
...
