<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface"
    tools:context=".dccticketing.ui.consent.one.DccTicketingConsentOneFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/agree_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/covid_certificate_validation_gradient"
                android:nestedScrollingEnabled="true"
                app:contentScrim="@drawable/top_app_bar_shape"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:titleEnabled="false">

                <ImageView
                    android:id="@+id/header_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/dcc_ticketing_consent_one_acessibility"
                    android:importantForAccessibility="no"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:srcCompat="@drawable/ic_dcc_ticketing_consent_illustration" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    style="@style/CWAMaterialToolbar.Close.Transparent"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:expandedTitleGravity="top"
                    app:layout_collapseMode="pin"
                    app:title="@string/dcc_ticketing_consent_one_header" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    style="@style/headline5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_32"
                    android:text="@string/dcc_ticketing_consent_one_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/provider_label"
                    style="@style/body2Medium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_24"
                    android:text="@string/dcc_ticketing_consent_one_provider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title" />

                <TextView
                    android:id="@+id/provider"
                    style="@style/body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24"
                    android:text="@string/dcc_ticketing_consent_one_provider_default"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/provider_label" />

                <TextView
                    android:id="@+id/booking_label"
                    style="@style/body2Medium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/dcc_ticketing_consent_one_booking"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/provider" />

                <TextView
                    android:id="@+id/subject"
                    style="@style/body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24"
                    android:text="@string/dcc_ticketing_consent_one_booking_default"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/booking_label" />

                <TextView
                    android:id="@+id/body"
                    style="@style/subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_24"
                    android:letterSpacing="0.0015"
                    android:text="@string/dcc_ticketing_consent_one_body"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/subject" />

                <de.rki.coronawarnapp.ui.view.BulletPointDataPrivacyView
                    android:id="@+id/dcc_ticketing_data_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_12"
                    android:layout_marginTop="@dimen/margin_32"
                    android:subtitle="@string/dcc_ticketing_consent_one_legal_body"
                    android:title="@string/dcc_ticketing_consent_one_legal_title"
                    app:bulletpointOne="@string/dcc_ticketing_consent_one_legal_point_1"
                    app:bulletpointTwo="@string/dcc_ticketing_consent_one_legal_point_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/body" />

                <de.rki.coronawarnapp.ui.view.BulletPointTextView
                    android:id="@+id/dcc_ticketing_bulletpoint_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_32"
                    android:layout_marginHorizontal="@dimen/margin_32"
                    android:description="@string/dcc_ticketing_consent_one_point_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dcc_ticketing_data_privacy" />

                <de.rki.coronawarnapp.ui.view.BulletPointTextView
                    android:id="@+id/dcc_ticketing_bulletpoint_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginHorizontal="@dimen/margin_32"
                    android:description="@string/dcc_ticketing_consent_one_point_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dcc_ticketing_bulletpoint_one" />

                <de.rki.coronawarnapp.ui.view.BulletPointTextView
                    android:id="@+id/dcc_ticketing_bulletpoint_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginHorizontal="@dimen/margin_32"
                    android:description="@string/dcc_ticketing_consent_one_point_3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dcc_ticketing_bulletpoint_two" />

                <de.rki.coronawarnapp.ui.view.BulletPointTextView
                    android:id="@+id/dcc_ticketing_bulletpoint_four"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginHorizontal="@dimen/margin_32"
                    android:description="@string/dcc_ticketing_consent_one_point_4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dcc_ticketing_bulletpoint_three" />

                <de.rki.coronawarnapp.ui.view.MoreInformationView
                    android:id="@+id/privacy_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_32"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/body"
                    app:layout_constraintStart_toStartOf="@id/body"
                    app:layout_constraintTop_toBottomOf="@id/dcc_ticketing_bulletpoint_four"
                    app:titleText="@string/dcc_ticketing_consent_one_data_protection" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <de.rki.coronawarnapp.ui.view.ProgressLoadingButton
        android:id="@+id/agree_button"
        style="@style/buttonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:buttonText="@string/dcc_ticketing_consent_one_consent_btn"
        app:isLoading="false"
        app:layout_constraintBottom_toTopOf="@id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coordinator_layout" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/buttonPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_24"
        android:layout_marginVertical="@dimen/margin_16"
        android:text="@string/dcc_ticketing_consent_one_cancel_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
